...
    // MARK: - Subviews
    
    private lazy var newCityButton: UIButton =
    makeButton(with: ViewModel.newCityButtonImage,
               action: #selector(addNewCity),
               pins: { $0.left(30).bottomSafe(20) },
               accessibilityIdentifier: "add_city")
    
    private lazy var toggleStyleButton: UIButton =
        makeButton(with: ViewModel.styleButtonImage,
                   action: #selector(toggleStyle),
                   pins: { $0.right(30).bottomSafe(20) },
                   accessibilityIdentifier: "toggle_style")
            
    private lazy var weatherCollectionController: WeatherCollectionController = {
        let weatherCollectionController = WeatherCollectionController(with: viewModel.weatherCollectionViewModel)
        addChild(weatherCollectionController)
        view.addSubview(weatherCollectionController.view)
        didMove(toParent: self)
...
